# Lab-2

./: .cproject  AdminController.cpp  AdminController.h  Benutzer.cpp  Benutzer.h  BenutzerController.cpp  BenutzerRepository.cpp  BenutzerRepository.h  Film.cpp  Film.h  Film.txt  FilmRepository.cpp  FilmRepository.h  RepoException.h  UI.cpp  ValidatorException.h  repo.cpp  repo.h  schokolade.cpp  schokolade.h  testRepo.cpp  tests.cpp  tests.h
Lab 2/: Complex.cpp  Complex.h
Lab 3/: Main.cpp  Node.cpp  Node.h  Tree.cpp  Tree.h
src/: AdminController.cpp  AdminController.h  Benutzer.cpp  Benutzer.h  BenutzerController.cpp  BenutzerController.h  BenutzerRepository.cpp  BenutzerRepository.h  CMakeLists.txt  Complex.cpp  Complex.h  Film.h  FilmRepository.cpp  FilmRepository.h  IORepoAbstract.h  Medikament.cpp  Medikament.h  MedikamentApp.cpp  MedikamentController.cpp  MedikamentController.h  MedikamentRepository.cpp  MedikamentRepository.h  Rational.cpp  Rational.h  UI.cpp  app.cpp  exceptions.cpp  exceptions.h  main_complex.cpp  tests.cpp  tests.h  ui.cpp  undo_redo.h
